--- a/main.css
+++ b/main.css
@@ -1,47 +1,49 @@
-:root {
-    --primary-color: hsl(0, 0%, 100%); /* White */
-    --secondary-color: hsl(212, 45%, 89%); /* Slate 300 */
-    --text-color: hsl(216, 15%, 48%); /* Slate 500 */
-    --main-text-color: hsl(218, 44%, 22%); /* Slate 900 */
-  }
+*{
+    margin: 0;
+    padding: 0;
+}
 
+:root {
+    --White: hsl(0, 0%, 100%);
+    --Slate-300: hsl(212, 45%, 89%);
+    --Slate-500: hsl(216, 15%, 48%);
+    --Slate-900: hsl(218, 44%, 22%);
+}
 
 body {
-
-    background-color: var(--secondary-color);
-    color: var(--main-text-color);
-    font-family: "Outfit", sans-serif;
-    font-size: 11px;
-    font-weight: 400px;
+    background-color: var(--Slate-300);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full height of the viewport */
-    margin: 0;
+    min-height: 100vh;
     text-align: center;
 }
 
 .qr{
-    background-color: var(--primary-color);
-    width: 200px;
-
-    border-radius: 5px;
-    padding: 10px;
+    font-family: "Outfit", sans-serif;
+    max-width: 270px;
+    height: auto;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: var(--White);
 }
 .qr__image{
     max-width: 100%;
-    max-height: 100%;
-    border-radius: 5px;
+    height: auto;
+    border-radius: 10px;
+    object-fit: cover;
 }
 .qr__container {
     padding: 0 5px 0;
 }
 .qr__title {
-    font-size: 15px;
-    font-weight: 700;
+    color: var(--Slate-900);
+    margin: 20px 0px 20px 0px;
+    font-size: 21x;
 }
 
 .qr__subtitle {
-    margin-bottom: 20px;
-    color: var(--text-color);
+    color: var(--Slate-500);
+    margin: 10px 10px 30px 10px;
+    font-size: 12px;
 }
