--- a/main.css
+++ b/main.css
@@ -1,17 +1,18 @@
+:root {
+    --White: hsl(0, 0%, 100%);
+    --Pale-Sky: hsl(212, 45%, 89%);
+    --Stone-Blue: hsl(216, 15%, 48%);
+    --Midnight-Blue: hsl(218, 44%, 22%);
+}
+
 *{
     margin: 0;
     padding: 0;
-}
-
-:root {
-    --White: hsl(0, 0%, 100%);
-    --Slate-300: hsl(212, 45%, 89%);
-    --Slate-500: hsl(216, 15%, 48%);
-    --Slate-900: hsl(218, 44%, 22%);
+    box-sizing: border-box;
 }
 
 body {
-    background-color: var(--Slate-300);
+    background-color: var(--Pale-Sky);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,23 +28,31 @@ body {
     border-radius: 10px;
     background-color: var(--White);
 }
+
 .qr__image{
     max-width: 100%;
     height: auto;
     border-radius: 10px;
     object-fit: cover;
 }
+
 .qr__container {
     padding: 0 5px 0;
 }
+
 .qr__title {
-    color: var(--Slate-900);
+    color: var(--Midnight-Blue);
     margin: 20px 0px 20px 0px;
     font-size: 21x;
 }
 
 .qr__subtitle {
-    color: var(--Slate-500);
+    color: var(--Stone-Blue);
     margin: 10px 10px 30px 10px;
     font-size: 12px;
+}
+
+footer{
+    max-width: 270px;
+    padding-top: 50px;
 }
